@@ -3,11 +3,6 @@
   "uniques": 40,
   "clones": [
     {
-      "timestamp": "2024-06-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-06-05T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -56,6 +51,11 @@
       "timestamp": "2024-06-17T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2024-06-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
